--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "type": "git",
     "url": "?.git"
   },
-  "author": "Bryson Gabrels"
+  "author": "Bryson Gabrels",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.8"
+  }
 }
