--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/BrysonGabrels/workflows.git"
   },
   "author": "Bryson Gabrels",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.3",
     "gulp-util": "^3.0.8"
   }
 }
